--- a/index.html
+++ b/index.html
@@ -3,29 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Крестики-нолики для Андрюши</title>
   <link rel="stylesheet" href="style.css">
+  <title>Abito</title>
 </head>
 <body>
-  <div id="tic-tac-toe-board">
-      <div class="row">
-          <div class="cell" id="cell-1"></div>
-          <div class="cell" id="cell-2"></div>
-          <div class="cell" id="cell-3"></div>
-      </div>
-      <div class="row">
-          <div class="cell" id="cell-4"></div>
-          <div class="cell" id="cell-5"></div>
-          <div class="cell" id="cell-6"></div>
-      </div>
-      <div class="row">
-          <div class="cell" id="cell-7"></div>
-          <div class="cell" id="cell-8"></div>
-          <div class="cell" id="cell-9"></div>
-      </div>
+  <div class="header">
+    <div class="conteiner">
+    <img src="/image/Logo.svg" alt="Logo" height="27" width="27">
+    <h1> Abito </h1>
   </div>
-  <div id="gameMessage" class="game-message"></div>
-  <button id="resetButton">Перезагрузка игры</button>  
-  <script src="script.js"></script>
+<div class="form"> Вход и регистрация</div>
+<div class="button annoucemen"> Подать объявление</div>
+  </div>
+  <div class="search">
+</div>
+  <div class="content"></div>
 </body>
 </html>
